--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "abortcontroller-polyfill": "^1.7.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "i18n-js": "^3.8.0",
     "moment": "^2.29.1",
@@ -39,6 +40,7 @@
     "react-native-screens": "^2.16.1",
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
