--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-dotenv": "^2.4.3",
     "react-native-fix-image": "^2.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modal": "^11.10.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
